# WinToast

./: .gitignore
example/SimpleDisplay/: SimpleDisplay.cpp  SimpleDisplay.h  SimpleDisplay.vcxproj  SimpleDisplay.vcxproj.filters
example/console-example/: WinToast Console Example.sln
example/console-example/TestConsume/: TestConsume.cpp  TestConsume.vcxproj  TestConsume.vcxproj.filters
example/console-example/TestConsumeMingw/: CMakeLists.txt  main.cpp
